syntax = "proto2"; 

enum Stype {
  INVALIDI_TYPE = 0;
  Auth = 1;
  System = 2;
  Logic = 3;
}

enum Cmd {
	INVALID_CMD = 0;
	
  eGuestLoginReq = 1;
  eGuestLoginRes = 2;
  eRelogin = 3;
  eUserLostConn = 4;
  eEditProfileReq = 5;
  eEditProfileRes = 6;

  eAccountUpgradeReq = 7;
  eAccountUpgradeRes = 8;

  eUnameLoginReq = 9;
  eUnameLoginRes = 10;

  eLoginOutReq = 11;
  eLoginOutRes = 12;
}

message GuestLoginReq {
  required string guest_key = 1;
}


message UnameLoginReq {
  required string uname = 1;
  required string upwd = 2;
}

message UserCenterInfo {
  required string unick = 1;
  required int32 uface = 2;
  required int32 usex = 3;
  required int32 uvip = 4;
  required int32 uid = 5;
}

message GuestLoginRes {
  required int32 status = 1;
  optional UserCenterInfo uinfo = 2;
}

message UnameLoginRes {
  required int32 status = 1;
  optional UserCenterInfo uinfo = 2;
}

message EditProfileReq {
  required string unick = 1;
  required int32 uface = 2;
  required int32 usex = 3;
}

message EditProfileRes {
  required int32 status = 1;
}

message AccountUpgradeReq {
  required string uname = 1;
  required string upwd_md5 = 2;
}

message AccountUpgradeRes {
  required int32 status = 1;
}

message LoginOutRes {
  required int32 status = 1;
}